--- a/aaa.plist
+++ b/aaa.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://218.92.221.67/download.ztgj.ztgame.com.cn/ztgj/ztgjr-11120.ipa</string>
+					<string>http://download.ztgj.ztgame.com.cn/ztgj/ztgjr-11130.ipa</string>
 				</dict>
                                 <dict>
                                         <key>kind</key>
